# NeuralNetwork

./: CMakeLists.txt  main.c  util.c  util.h
network/: layer.c  layer.h  method.c  method.h  neuron.c  neuron.h
test/: main.c  test.c  test.h  test_method.h
tests/: test.c  test.h  test_method.c
